--- a/ericspencer00.github.io/hugo.toml
+++ b/ericspencer00.github.io/hugo.toml
@@ -2,3 +2,8 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'Eric Spencer'
 theme = "github-style"
+
+lastmod = true
+
+[frontmatter]
+  lastmod = ["lastmod", ":fileModTime", ":default"]
