--- a/ericspencer00.github.io/hugo.toml
+++ b/ericspencer00.github.io/hugo.toml
@@ -1,9 +1,3 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'Eric Spencer'
-theme = "github-style"
-
-lastmod = true
-
-[frontmatter]
-  lastmod = ["lastmod", ":fileModTime", ":default"]
+title = 'My New Hugo Site'
